@@ -1,5 +1,11 @@
 2008-09-18  Mike Krüger <mkrueger@novell.com> 
 
+	* MonoDevelop.CSharpBinding/CodeCompletionTests.cs: added unit test for
+	  "Bug 427294 - Code Completion: completion on values returned by
+	  methods doesn't work".
+
+2008-09-18  Mike Krüger <mkrueger@novell.com> 
+
 	* MonoDevelop.CSharpBinding/CodeCompletionTests.cs: added test for "Bug
 	  427284 - Code Completion: class list shows the full name of
 	  classes".
